--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,3 +77,49 @@ nav {
 	text-align: center;
 	text-decoration: none;
 }
+/* Services */
+section {
+	margin: 120px 0;
+}
+.title {
+	font-family: Montserrat;
+	font-weight: 700;
+	font-size: 40px;
+	color: #222222;
+	margin: 0 auto 18px auto;
+}
+.subtitle {
+	font-family: 'Roboto Slab';
+	font-style: italic;
+	margin: 0 auto 72px auto;
+}
+.services-card {
+	padding: 0 24px;
+}
+.services-card i {
+	height: 72px;
+	width: 72px;
+	font-size: 36px;
+	line-height: 60px;
+	color: #fed136;
+	background-color: #ffffff;
+	border: 4px solid #fed136;
+	border-radius: 50%;
+	margin: 0 auto 24px auto;
+}
+.services-card h4 {
+	font-family: Montserrat;
+	font-weight: 700;
+	font-size: 18px;
+	color: #222222;
+	margin: 0 auto 18px auto;
+}
+.services-card p {
+	font-size: 14px;
+	color: #ff0000;
+	margin: 0 auto;
+}
+/* Portfolio */
+.portfolio {
+	background-color: #f7f7f7;
+}
