--- a/sass/style.scss
+++ b/sass/style.scss
@@ -116,10 +116,61 @@ section {
 }
 .services-card p {
 	font-size: 14px;
-	color: #ff0000;
 	margin: 0 auto;
 }
 /* Portfolio */
 .portfolio {
 	background-color: #f7f7f7;
+	margin-bottom: 0;
+}
+.portfolio .title {
+	margin-top: 120px;
+}
+.portfolio-card {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 48px;
+}
+.portfolio-card:last-child {
+	margin-bottom: 120px;
+}
+.portfolio-card img {
+	background-color: #00ff00;
+}
+.portfolio-description {
+	background-color: #ffffff;
+}
+.portfolio-description h5 {
+	font-family: Montserrat;
+	font-size: 18px;
+	color: #222222;
+	margin: 30px auto 12px auto;
+	padding: 0;
+}
+.portfolio-description p {
+	font-size: 14px;
+	font-style: italic;
+	padding: 0;
+	margin: 0 auto 30px auto;
+}
+/* Footer */
+footer {
+	margin: 42px auto;
+	padding: 0;
+}
+.copyright {
+	font-family: Montserrat;
+	font-size: 14px;
+	margin: 0;
+	padding: 0;
+}
+.social-icons i {
+	height: 42px;
+	width: 42px;
+	font-size: 18px;
+	line-height: 42px;
+	color: #ffffff;
+	background-color: #222222;
+	border-radius: 50%;
+	margin: 0 6px 0 6px;
 }
